--- a/templates/default/default.css
+++ b/templates/default/default.css
@@ -46,7 +46,8 @@ main .button {
 	font-size: 14px;
 	font-weight: 700;
 	transition: background .13s ease-out, border-color .13s ease-out, color .13s ease-out, box-shadow .13s ease-out;
-	line-height: 1.3;
+  line-height: 1.3;
+  -webkit-appearance: none;
 }
 
 main .button.primary {
